   of it's children would be sorted before alphabetically (closes #3193982).
 * src/toolbar.c:
   Correctly expand the menubar if the toolbar is appended to it but
   not visible (closes #3204955).
 * src/callbacks.c:
   Create a new undo action when inserting templates, making sure the user
   can undo the template insertion without also undoing a previous action.


2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
   win32-config.h, wscript:
   Version bump for Geany 0.20.1.
 * *.*:
   Update copyright information.
 * AUTHORS, src/about.c, README.Packagers, README:
   Welcome Colomban Wendling, a new Geany developer.
 * src/editor.c:
   Ensure the editor widget has the focus when the editor menu is
   called.
 * tagmanager/php.c:
   Fix memory leaks (reported by an anonymous IRC user).
 * src/project.c:
   Improve error checking when trying to write project files
   (patch by Colomban Wendling, thanks).
   Add a warning if writing the project file fails on close.
 * plugins/saveactions.c:
   Fix wrong warning on empty backup directory setting if
   'Backup Copy' is not enabled at all.
 * plugins/export.c:
   Fix off-by-one bug which hidden the last empty line of a document.
 * data/filetype_extensions.conf:
   Add Markdown extension.


2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * New release: Geany 0.20 "Disra".


2011-01-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Add debug message with the number of compatible plugins in each
   plugin search path when showing the Plugin Manager dialog.


2010-12-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Move and update 'Custom filetypes' section.
   Add 'Creating a custom filetype from an existing filetype' section.


2010-12-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
